macro/src/deriver/snapshots/cli_compose_macro__deriver__pos_arg__tests__struct_with_multiple_fields.snap
---
source: macro/src/deriver/pos_arg.rs
assertion_line: 154
expression: "test_pos_arg_deriver(quote! { struct Foo(String, i32) ; })"
---
Err(
    Error(
        "multiple fields are not allowed",
    ),
)
