macro/src/deriver/snapshots/cli_compose_macro__deriver__pos_arg__tests__struct_without_field.snap
---
source: macro/src/deriver/pos_arg.rs
assertion_line: 139
expression: "test_pos_arg_deriver(quote! { struct Foo ; })"
---
Err(
    Error(
        "missing field",
    ),
)
